Fix list spacing in .content and .tab-content.

--- a/files/static/less/core.less
+++ b/files/static/less/core.less
@@ -164,7 +164,8 @@ a:focus {
     margin-top:21px;
 }
 
-.tab-content li {
+.tab-content li,
+.content li {
     padding: 2px 0;
 }
 
